added GetOneUser func with tests
